registro de aluno e fichade aluno

--- a/ctep-electron/src/app/custom-components/custom-table/custom-table.component.html
+++ b/ctep-electron/src/app/custom-components/custom-table/custom-table.component.html
@@ -1,4 +1,4 @@
-<div style="display: grid; width: 100%;">
+<div style="display: grid; width: 100%;margin-bottom: 10px;">
     <div class="table-container" style="max-height: 80vh; overflow: auto;" #tableToExport>
         <table mat-table datatable [dataSource]="listOfElements" multiTemplateDataRows matSort
             (matSortChange)="sortData($event)">
@@ -8,20 +8,30 @@
                     [attr.colspan]="column.colspan" [ngClass]="column.classHeader" style="align-items: left">
                     {{ column.header }}
                 </th>
-                <td mat-cell 
-                    *matCellDef="let element; let i = dataIndex" 
+                <td mat-cell
+                    *matCellDef="let element; let i = dataIndex"
                     [attr.colspan]="column.colspan"
-                    [ngClass]="column.classBody" 
+                    [ngClass]="column.classBody"
                     [attr.rowspan]="column.mesclavel ? element.rowspan : 1"
                     [style.display]="column.mesclavel && element.rowspan == 0 ? 'none' : ''">
                     <ng-container *ngIf="column.bodyTemplateName == null ||
                                         templatesCustomTable[column.bodyTemplateName] == null">
-                        <span class="{{isNumber(element, column.field, column.isNumeric)}}">
+                        <ng-container *ngIf="mostrarTooltip(element, column); else elseTemplate">
+                            <span [matTooltip]="stringTooltip(element, column, true)">
+                            {{ stringTooltip(element, column, false) }}
+                        </span>
+
+                        </ng-container>
+                        <ng-template #elseTemplate>
+                            <span class="{{isNumber(element, column.field, column.isNumeric)}}">
                             {{ resolveField(element, column.field) }}
                         </span>
+
+                        </ng-template>
+
                     </ng-container>
                     <ng-container *ngIf="column.bodyTemplateName != null && templatesCustomTable[column.bodyTemplateName] != null">
-                        <ng-container 
+                        <ng-container
                             *ngTemplateOutlet="templatesCustomTable[column.bodyTemplateName];
                             context: {
                                 $implicit: element,
@@ -40,13 +50,13 @@
                         [ngClass]="colGroup.groupHeaderClass"></tr>
                 </ng-container>
                 <ng-container *ngIf="colGroup.groupHasBody">
-                    <tr mat-row 
+                    <tr mat-row
                         *matRowDef="
                             let element;
                             let i = index;
                             let row;
-                            columns: displayedColumns(colGroup.keyGroup)" 
-                        [ngClass]="colGroup.groupBodyClass" 
+                            columns: displayedColumns(colGroup.keyGroup)"
+                        [ngClass]="colGroup.groupBodyClass"
                         (click)="elementClicked(element, $event)"></tr>
                 </ng-container>
             </ng-container>
