--- a/ctep-electron/src/app/view/aluno/formulario-aluno/formulario-aluno.component.html
+++ b/ctep-electron/src/app/view/aluno/formulario-aluno/formulario-aluno.component.html
@@ -23,7 +23,7 @@
                 </ng-container>
                 <ng-template #elseFoto>
                     <img src="{{imagem}}" alt=""><br>
-                    <button mat-raised-button color="accent" matSuffix (click)="imagem=null">
+                    <button mat-raised-button color="accent" matSuffix (click)="removerFoto()">
                         <mat-icon aria-hidden="false">delete</mat-icon>
                         Remover foto
                     </button>
