--- a/ctep-electron/src/app/view/aluno/turma-aluno/turma-aluno.component.html
+++ b/ctep-electron/src/app/view/aluno/turma-aluno/turma-aluno.component.html
@@ -30,8 +30,7 @@
                     mat-raised-button
                     color="accent"
                     matSuffix
-                    (click)="gerarMatricula()"
-                >
+                    (click)="gerarMatricula()">
                     Gerar Matrícula
                 </button>
             </mat-form-field>
