--- a/ctep-electron/src/app/custom-components/custom-select/custom-select.component.html
+++ b/ctep-electron/src/app/custom-components/custom-select/custom-select.component.html
@@ -7,7 +7,7 @@
         <ng-container *ngIf="getLoading(); else loading">
 
             <mat-option *ngFor="let op of options" [value]="op">
-                {{op[field]}}
+                {{resolveField(op, field)}}
             </mat-option>
 
         </ng-container>
