--- a/ctep-electron/src/styles.scss
+++ b/ctep-electron/src/styles.scss
@@ -335,6 +335,9 @@ button.mat-raised-button {
     }
     .mat-tab-body {
         padding: 0 15px;
+        .mat-tab-body-content {
+            height: unset;
+        }
     }
     &.mat-primary .mat-ink-bar {
         background-color: $primary;
@@ -345,6 +348,14 @@ button.mat-raised-button {
         0px 4px 5px 0px rgba(0, 0, 0, 0.14),
         0px 1px 10px 0px rgba(0, 0, 0, 0.12);
 }
+
+.print-container {
+    .mat-tab-body-content {
+        height: unset;
+        padding-bottom: 40px;
+    }
+}
+
 
 .mat-form-field-appearance-outline .mat-form-field-outline {
     background-color: white !important;
