calculadora de mensalidades

--- a/src/app/view/painel-geral/painel-geral.component.html
+++ b/src/app/view/painel-geral/painel-geral.component.html
@@ -1,5 +1,5 @@
-<p>painel-geral works!</p>
-<div class="col-3">afdasfa</div>
-<div class="col-3">safd</div>
-<div class="col-3">dsaadg</div>
-<div class="col-3">adsfsda</div>
+<div class="form-grid">
+    <mat-card class="six">
+        <calculadora></calculadora>
+    </mat-card>
+</div>
