--- a/src/app/view/aluno/ficha-aluno/ficha-aluno.component.html
+++ b/src/app/view/aluno/ficha-aluno/ficha-aluno.component.html
@@ -18,7 +18,7 @@
                     <span>Vincular em Turma</span>
                 </button>
                 <button mat-menu-item (click)="transferirTurma()">
-                    <mat-icon>link</mat-icon>
+                    <mat-icon>swap-horiz</mat-icon>
                     <span>Transferir de Turma</span>
                 </button>
                 <button mat-menu-item (click)="imprimir()">
