correção de build e calendário

--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -14,7 +14,7 @@
                  disableClose>
         <section  (mouseout)="desenhar('out')" (mouseover)="desenhar('in')" class="items">
             <a class='logo' routerLink="/">
-                <img src="/assets/images/logo.png" alt="">
+                <img src="assets/images/logo.png" alt="">
             </a>
             <a class="menu-item" (mouseover)="desenhar('in')" (click)="redirecionar('aluno')">
                 <mat-icon aria-hidden="false">person</mat-icon>
