--- a/src/app/view/aluno/ficha-aluno/ficha-aluno.component.html
+++ b/src/app/view/aluno/ficha-aluno/ficha-aluno.component.html
@@ -18,7 +18,7 @@
                     <span>Vincular em Turma</span>
                 </button>
                 <button mat-menu-item (click)="transferirTurma()">
-                    <mat-icon>swap-horiz</mat-icon>
+                    <mat-icon>swap_horiz</mat-icon>
                     <span>Transferir de Turma</span>
                 </button>
                 <button mat-menu-item (click)="imprimir()">
@@ -35,7 +35,7 @@
             <div class="form-grid" >
                 <span class="imagem-perfil image">
                     <ng-container *ngIf="imagem==null; else elseFoto">
-                        <img src="/assets/images/empty-avatar.png" alt="">
+                        <img src="assets/images/empty-avatar.png" alt="">
                     </ng-container>
                     <ng-template #elseFoto>
                         <img src="{{imagem}}" alt=""><br>
