versão da aplicação

--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -25,6 +25,7 @@
                 <span>Turma</span>
             </a>
         </section>
+        <span class="version">Versão do Sistema: {{version}}</span>
     </mat-sidenav>
     <mat-sidenav-content>
         <router-outlet></router-outlet>
