mostrar matrícula, mostrar botão de registro e confirmar exclusão

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -73,7 +73,7 @@ body {
         color: $light-gray;
     }
 }
-.mat-fab, .mat-mini-fab, .mat-raised-button, .mat-button {
+.mat-fab, .mat-mini-fab, .mat-raised-button {
     &.mat-primary {
         background-color: $primary;
     }
