--- a/src/styles.scss
+++ b/src/styles.scss
@@ -79,7 +79,7 @@ body {
     }
     &.mat-accent {
         background-color: $light-gray;
-    }   
+    }
 }
 
 .mat-card {
@@ -361,7 +361,7 @@ button.mat-raised-button {
         0px 1px 10px 0px rgba(0, 0, 0, 0.12);
 }
 
-.print-container {
+#print-container {
     .mat-tab-body-content {
         height: unset;
         padding-bottom: 40px;
