--- a/src/app/view/aluno/pesquisar-aluno/pesquisar-aluno.component.html
+++ b/src/app/view/aluno/pesquisar-aluno/pesquisar-aluno.component.html
@@ -3,7 +3,7 @@
     <div style="display: flex;">
         <h1>Pesquisar Alunos</h1>
         <div class="buttons">
-            <button mat-button color="primary" (click)="exportarPesquisa()">
+            <button mat-raised-button color="primary" (click)="exportarPesquisa()">
                 <mat-icon svgIcon="xls_icon"></mat-icon> Exportar Pesquisa
             </button>
         </div>
