--- a/src/styles.scss
+++ b/src/styles.scss
@@ -63,6 +63,9 @@ body {
     margin-left: 10px;
 }
 
+button:hover {
+    opacity: 0.8;
+}
 .mat-button {
     min-width: 100px;
     margin-left: 10px;
