--- a/src/app/view/home/home.component.scss
+++ b/src/app/view/home/home.component.scss
@@ -21,11 +21,11 @@
 .menu-item {
     position: relative;
     display: flex;
-    padding: 20px;
+    padding: 15px;
     width: 80px;
     text-align: center;
     vertical-align: middle;
-    font-size: 30px;
+    font-size: 25px;
     font-family: 'Roboto-Black';
     color: $white;
     width: auto;
@@ -58,7 +58,7 @@
 
 .mat-drawer-container > .mat-drawer {
     position: relative;
-    width: 300px;
+    width: 280px;
     background-color: $primary;
 }
 
@@ -84,8 +84,11 @@
     padding-top: 10px;
 }
 
-.logado {
-    padding-left: 30px;
+.mat-toolbar {
+    h4.logado {
+        padding-left: 30px;
+        font: 400 15px/24px Roboto, "Helvetica Neue", sans-serif;
+    }
 }
 .version {
     position: absolute;
