Mudança de status de aluno e pequenos ajustes visuais

--- a/src/app/view/aluno/ficha-aluno/ficha-aluno.component.html
+++ b/src/app/view/aluno/ficha-aluno/ficha-aluno.component.html
@@ -21,6 +21,10 @@
                     <mat-icon>swap_horiz</mat-icon>
                     <span>Transferir de Turma</span>
                 </button>
+                <button mat-menu-item (click)="alterarSituacao()">
+                    <mat-icon>change_circle</mat-icon>
+                    <span>Alterar Situação</span>
+                </button>
                 <button mat-menu-item (click)="imprimir()">
                     <mat-icon>print</mat-icon>
                     <span>Imprimir</span>
