Exibindo turmas de aluno

--- a/src/app/view/aluno/aluno-menu.component.html
+++ b/src/app/view/aluno/aluno-menu.component.html
@@ -1,6 +1,6 @@
 <mat-accordion>
     <mat-expansion-panel [(expanded)]='expanded'>
-        <mat-expansion-panel-header>
+        <mat-expansion-panel-header [collapsedHeight]="'40px'" [expandedHeight]="'50px'">
             <mat-panel-title>
                 Alunos
             </mat-panel-title>
