--- a/src/app/view/aluno/ficha-aluno/ficha-aluno.component.html
+++ b/src/app/view/aluno/ficha-aluno/ficha-aluno.component.html
@@ -150,13 +150,15 @@
             </div>
         </mat-tab>
         <mat-tab label="Registro">
-            <h4>Registro do Aluno
+            <h4>Registro do Aluno</h4>
+            <div style="display: flex;">
+                <h4 class="info-field">Aluno: {{element.nome}}</h4>
                 <div class="buttons">
                     <button mat-button color="accent" (click)="adicionarRegistro()">
                         <mat-icon>add</mat-icon>Adicionar
                     </button>
                 </div>
-            </h4>
+            </div>
             <custom-table [columns]="columnsRegistro" [listOfElements]="element.registros">
                 <ng-template let-element customTemplate="acoesTemplate">
                     <div style="text-align: end;">
@@ -169,7 +171,22 @@
                 </ng-template>
             </custom-table>
         </mat-tab>
-        <mat-tab label="Turmas e Notas"></mat-tab>
+        <mat-tab label="Turmas e Notas">
+            <h4>Turmas e Notas</h4>
+            <h4 class="info-field">Aluno: {{element.nome}}</h4>
+            <custom-table [columns]="columnsTurma" [listOfElements]="element.turmasAluno">
+                <ng-template let-element customTemplate="acoesTemplate">
+                    <!-- <div style="text-align: end;">
+                        <button mat-icon-button color="primary"
+                                matTooltip="Excluir Registro"
+                                (click)="excluirRegistro(element)">
+                            <i class="material-icons">delete</i>
+                        </button>
+                    </div> -->
+                </ng-template>
+            </custom-table>
+
+        </mat-tab>
     </mat-tab-group>
 </div>
 
