--- a/src/app/view/turma/filtro-turma/filtro-turma.component.html
+++ b/src/app/view/turma/filtro-turma/filtro-turma.component.html
@@ -1,5 +1,5 @@
 <mat-expansion-panel [expanded]="true">
-    <mat-expansion-panel-header>
+    <mat-expansion-panel-header [collapsedHeight]="'40px'" [expandedHeight]="'50px'">
         <mat-panel-title> Filtro </mat-panel-title>
     </mat-expansion-panel-header>
     <div class="form-grid">
