--- a/src/app/view/aluno/ficha-aluno/ficha-aluno.component.html
+++ b/src/app/view/aluno/ficha-aluno/ficha-aluno.component.html
@@ -152,7 +152,7 @@
         <mat-tab label="Turmas e Notas">
             <h4>Turmas e Notas</h4>
             <h4 class="info-field">Aluno: {{element.nome}}</h4>
-            <custom-table [columns]="columnsTurma" [listOfElements]="element.turmasAluno">
+            <custom-table [columns]="columnsTurma" [colGroups]="columnGroupsTurma" [listOfElements]="element.turmasAluno">
                 <ng-template let-element customTemplate="acoesTemplate">
                     <!-- <div style="text-align: end;">
                         <button mat-icon-button color="primary"
@@ -162,6 +162,19 @@
                         </button>
                     </div> -->
                 </ng-template>
+                <ng-template let-element let-column="column" let-index='rowIndex' customTemplate="expand">
+                    <button mat-icon-button color="primary" class="toggleButton" (click)="expandTable(element)">
+                        <mat-icon class="material-icons">{{changeIconTurma[index] ? 'expand_less' : 'expand_more'}}</mat-icon>
+                    </button>
+                </ng-template>
+
+                <ng-template let-element customTemplate="expandedDetailTemplate">
+                    <div class="element-detail" [@detailExpand]="
+                      expandedTurma.includes(element) ? 'expanded' : 'collapsed'">
+                        <h4>Relatórios</h4>
+                    </div>
+                </ng-template>
+
             </custom-table>
 
         </mat-tab>
