--- a/src/app/view/aluno/alteracao-situacao/alteracao-situacao.component.html
+++ b/src/app/view/aluno/alteracao-situacao/alteracao-situacao.component.html
@@ -21,6 +21,8 @@
                 <mat-label>Código de conclusão Sistec:</mat-label>
                 <input matInput [(ngModel)]="element.codigoSistec" />
             </mat-form-field>
+            <custom-datetimepicker [(value)]="dataConclusao" name='Data de Conclusão' class="six" *ngIf="ehConclusao()">
+            </custom-datetimepicker>
             <mat-form-field class="twelve">
                 <mat-label>Registro:</mat-label>
                 <textarea matInput [(ngModel)]="element.registro"></textarea>
